# spec-int-2006

./: LICENSE  MANIFEST  README  README-SPEC2006  README.md  Revisions  SPEC_LICENSE_NUMBER_259.txt  cshrc  fakebuildlbm  install.bat  install.sh  shrc  shrc.bat  uninstall.sh
Docs/: config.html  credits.html  errata.html  flag-description.html  index.html  install-guide-unix.html  install-guide-windows.html  legal.html  makevars.html  readme1st.html  result-fields.html  runrules.html  runspec-avoidance.html  runspec.html  sample-sysinfo-program.pl  system-requirements.html  techsupport.html  tools-build.html  utility.html
Docs.txt/: config  credits  errata  flag-description  index.txt  install-guide-unix  install-guide-windows.txt  legal  makevars  readme1st.txt  result-fields  runrules  runspec-avoidance.txt  runspec.txt  system-requirements.txt  techsupport  tools-build.txt  utility.txt
Docs/css/: cpu2006docs.css  cpu2006result.css
Docs/flags/: cpuflags1.dtd  example-medium-cfg-flags.xml  flags-advanced.html  flags-advanced.xml  flags-mandatory.html  flags-simple.html  flags-simple.xml
benchspec/: Makefile.defaults  flags-mandatory.xml
benchspec/CPU2006/: CFP2006.bset  CINT2006.bset  all_c.bset  all_cpp.bset  all_except_c.bset  all_except_cpp.bset  all_except_f77.bset  all_except_f9x.bset  all_except_fortran.bset  all_f77.bset  all_f9x.bset  all_fortran.bset
config/: HP-UX_IPF_ILP32.cfg  HP-UX_IPF_LP64.cfg  aix-ppc32-XL.cfg  aix-ppc64-XL.cfg  default.cfg  default.cfg.2014-04-14_2205  example-medium.cfg  example-simple.cfg  linux-amd64-pathscale.cfg  linux-ia64-icc91.cfg  linux32-i386-gcc42.cfg  linux32-ia32-icl.cfg  linux64-amd32-gcc42.cfg  linux64-amd64-gcc41.cfg  linux64-amd64-gcc42.cfg  linux64-amd64-pgi.cfg  linux64-em64t-icl.cfg  macosx-ia32-iccifortv91.cfg  macosx-ppc32-gcc40-nagf95v50.cfg  sgi_mips32.cfg  sgi_mips64.cfg  solaris-amd64-sunstudio.cfg  solaris-sparc-pn2.4.1-fcs.cfg  solaris-sparc-sunstudio.cfg  windows-em64t-icl.cfg  windows-ia32-icl.cfg  windows64-amd64-pgi.cfg
original.src/: cpu2006.tar.bz2.md5
result/: CFP2006.002.flags.html  CFP2006.002.rsf  CFP2006.002.txt
tools/src/: buildtools  buildtools.bat
tools/src/Algorithm-Diff-1.15/: Makefile
tools/src/Compress-Bzip2-2.09/: Bzip2.c  Bzip2.xs  MANIFEST  META.yml  Makefile  Makefile.PL  config.in  const-c.inc  ppport.h  show_bzversion.c
tools/src/Compress-Zlib-1.34/: Makefile  Makefile.PL  Zlib.c  Zlib.pm  constants.h
tools/src/Font-AFM-1.18/: Makefile
tools/src/GD-1.19/: GD.c  Makefile
tools/src/HTML-Parser-3.45/: Makefile  Parser.c
tools/src/HTML-Tagset-3.04/: ChangeLog  MANIFEST  META.yml  Makefile  Makefile.PL
tools/src/IO-stringy-2.108/: Makefile  README
tools/src/MIME-tools-5.417/: ChangeLog  MANIFEST  META.yml  Makefile  README
tools/src/MailTools-1.58/: Makefile  Makefile.PL
tools/src/PDF-API2-0.41/: CHANGELOG  INSTALL  MANIFEST  Makefile  Makefile.PL  README  TODO
tools/src/Text-CSV_XS-0.23/: CSV_XS.c  CSV_XS.xs  ChangeLog  MANIFEST  Makefile  Makefile.PL  README  test.pl
tools/src/URI-1.35/: Makefile
tools/src/XML-NamespaceSupport-1.08/: Makefile
tools/src/XML-SAX-0.12/: MANIFEST  Makefile  Makefile.PL
tools/src/bzip2-1.0.3/: Makefile  Makefile.in  bzip2.c  bzip2recover  config.cache  config.h  config.h.in  config.status  configure  configure.in  makefile.msc
tools/src/specinvoke/: Makefile  Makefile.in  Makefile.nt  config.cache  config.guess  config.h  config.h.in  config.h.win32  config.status  config.sub  configure  configure.in  getopt.c  install-sh  specinvoke.c  specinvoke.h  specinvoke_pm  unix.c  win32.c
tools/src/specinvoke/pm_stub/: Makefile  Makefile.in  Makefile.nt  Makefile.settings  pmfuncs.c  specinvoke_pm.h
tools/src/specmd5sum/: Makefile  Makefile.in  Makefile.nt  aclocal.m4  config.cache  config.h  config.h.in  config.h.win32  config.status  configure  configure.in  md5sum.c  system.h
tools/src/specmd5sum/lib/: Makefile  Makefile.in  Makefile.nt  getline.h  getopt.c  long-options.c  md5.c  md5.h  strtol.c  strtoull.c  xmalloc.c  xmalloc.h
tools/src/specmd5sum/win32/: README  dirent.c  dirent.h
(+2871 files in other folders)
