# Process this file with autoconf to produce a configure script.
dnl AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_INIT(bzip2.c)
dnl Most of these things are boiler plate (from autoscan);
dnl but here's some of my stuff
dnl Begin Cloyce's block of stuff

dnl autoconf 2.13 doesn't have this macro... we don't really need it anyway;
dnl nobody will have a 2+GB data file anyway.
dnl AC_SYS_LARGEFILE

dnl End Cloyce's block of stuff

dnl More stuff that's not in 2.13
dnl AC_CONFIG_SRCDIR([bzip2.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_RANLIB
AC_PATH_PROG(RM, rm)
AC_PATH_PROG(AR, ar)
AC_PATH_PROG(CMP, cmp)

dnl If CFLAGS only has -g or is empty, change it to -O
if test "x$CFLAGS" = x-g || test "x$CFLAGS" = x; then
  CFLAGS=-O
fi

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([errno.h fcntl.h stdlib.h string.h unistd.h utime.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_UTIME_NULL
AC_CHECK_FUNCS([strerror strstr utime chown malloc])

dnl the 2.52 version
dnl AC_CONFIG_FILES([Makefile])
dnl AC_OUTPUT(, echo timestamp > stamp-h)

dnl ...and the 2.13 version
AC_OUTPUT(Makefile)
