dnl Process this file with autoconf to produce a configure script.
AC_REVISION([ $Id: configure.in 2522 2005-04-07 05:54:49Z cloyce $ ])
AC_INIT(specinvoke.c)

AC_CONFIG_HEADER(config.h)

dnl AC_CANONICAL_SYSTEM
dnl AC_DEFINE_UNQUOTED(HOSTTYPE, "$host")
dnl case "$host" in
dnl   *-sni-sysv4)
dnl     CFLAGS="$CFLAGS -D_XPG_IV"
dnl     ;;
dnl   *-hp-hp*)
dnl     # HP needs -Ae for ANSI C
dnl     # Use -D_REENTRANT to make errno thread-safe.
dnl     CFLAGS="$CFLAGS -Ae"
dnl     ;;
dnl   *)
dnl     ;;
dnl esac

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl If CFLAGS only has -g or is empty, change it to -O
if test "x$CFLAGS" = x-g || test "x$CFLAGS" = x; then
  CFLAGS=-O
fi

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_TIME
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS( errno.h fcntl.h getopt.h string.h sys/timeb.h sys/time.h )
AC_CHECK_HEADERS( sys/types.h sys/wait.h unistd.h )

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_OFF_T
AC_TYPE_MODE_T

dnl Checks for library functions.
AC_CHECK_FUNCS( waitpid getopt strerror nanosleep usleep select )

dnl check for environment variables
AC_SUBST(OPTIMIZE)
AC_SUBST(USE_GETOPT_C)

AC_OUTPUT(Makefile pm_stub/Makefile)
