dnl Process this file with autoconf to produce a configure script.
AC_INIT(md5sum.c)
AM_CONFIG_HEADER(config.h)
AC_PREREQ(2.13)dnl               dnl Minimum Autoconf version required.

AM_INIT_AUTOMAKE([specmd5sum], [1.1])
GNU_PACKAGE="SPEC $PACKAGE"
AC_DEFINE_UNQUOTED(GNU_PACKAGE, "$GNU_PACKAGE")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_AIX
AC_PATH_PROG(AR, ar, :)
AC_PATH_PROG(STRIP, strip, :)

dnl If CFLAGS only has -g or is empty, change it to -O
if test "x$CFLAGS" = x-g || test "x$CFLAGS" = x; then
  CFLAGS=-O
fi

dnl Checks for header files.
AC_CHECK_HEADERS(limits.h string.h stdlib.h unistd.h ctype.h)
AC_HEADER_STAT
AC_HEADER_STDC

dnl This test must precede tests of compiler characteristics like
dnl that for the inline keyword, since it may change the degree to
dnl which the compiler supports such features.
AM_C_PROTOTYPES

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_BIGENDIAN
AC_C_CONST
AC_CHECK_SIZEOF(long long)

AC_TYPE_SIZE_T

dnl This test replaces the obsolescent AC_ISC_POSIX kludge.
AC_CHECK_LIB(cposix, strerror, [LIBS="$LIBS -lcposix"])

dnl Checks for library functions.
AC_CHECK_FUNCS(strchr strerror)
AC_FUNC_VPRINTF

AM_FUNC_ERROR_AT_LINE

AC_REPLACE_FUNCS(getline)
if test $ac_cv_func_getline != yes; then
  AC_CHECK_FUNCS(getdelim)
fi

AC_SUBST(OPTIMIZE)
AC_OUTPUT(Makefile lib/Makefile)
